--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "test": "karma start karma.conf.js",
     "tslint": "tslint",
     "stylelint": "stylelint",
-    "server": "webpack-dev-server --devtool --inline  --hot  --content-base --client-log-level warning",
+    "server": "webpack-dev-server --devtool --inline  --content-base --client-log-level warning --env.dev",
     "start": "npm run server",
     "build": "webpack --progress --colors --display-modules",
     "tsd": "tsd"
@@ -49,7 +49,7 @@
     "webpack": "^1.13.2",
     "webpack-dev-server": "^1.16.2"
   },
-  "dependencies": {
+  "dependencies": {    
     "normalize-scss": "^6.0.0",
     "pixi.js": "^4.1.1"
   }
