--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,8 +2,10 @@
   "compilerOptions": {
     "target": "es6",
     "module": "commonjs",        
-    "sourceMap": true
-    
+    "sourceMap": true,
+     "typeRoots": [
+      "./node_modules/@types"
+    ]    
   },
   "exclude": [
     "node_modules"    
