--- a/package.json
+++ b/package.json
@@ -26,38 +26,39 @@
     "@types/lodash": "^4.14.39",
     "@types/mocha": "^2.2.33",
     "@types/node": "^6.0.49",
-    "autoprefixer": "^6.5.1",
-    "awesome-typescript-loader": "^2.2.4",
+    "@types/pixi.js": "^4.0.1",
+    "autoprefixer": "^6.5.3",
+    "awesome-typescript-loader": "^3.0.0-beta.3",
     "chai": "^3.5.0",
-    "copy-webpack-plugin": "^4.0.0",
-    "css-loader": "^0.25.0",
+    "copy-webpack-plugin": "^4.0.1",
+    "css-loader": "^0.26.0",
     "extract-text-webpack-plugin": "^1.0.1",
     "karma": "^1.3.0",
     "karma-chai": "^0.1.0",
     "karma-chrome-launcher": "^2.0.0",
-    "karma-mocha": "^1.2.0",
+    "karma-mocha": "^1.3.0",
     "karma-phantomjs-launcher": "^1.0.2",
     "karma-webpack": "^1.8.0",
     "mocha": "^3.1.2",
-    "node-sass": "^3.10.1",
+    "node-sass": "^3.13.0",
     "phantomjs": "^2.1.7",
-    "postcss-loader": "^1.0.0",
+    "postcss-loader": "^1.1.1",
     "sass-loader": "^4.0.2",
     "style-loader": "^0.13.1",
-    "stylelint-config-standard": "^14.0.0",
+    "stylelint-config-standard": "^15.0.0",
     "stylelint-webpack-plugin": "^0.4.0",
-    "ts-loader": "^0.9.5",
-    "tslint": "^3.15.1",
-    "tslint-eslint-rules": "^2.1.0",
-    "tslint-loader": "^2.1.5",
-    "typescript": "^2.0.6",    
-    "webpack": "^1.13.2",
+    "ts-loader": "^1.2.2",
+    "tslint": "^4.0.1",
+    "tslint-eslint-rules": "^3.0.0",
+    "tslint-loader": "^3.2.0",
+    "typescript": "^2.0.10",
+    "webpack": "^1.13.3",
     "webpack-dev-server": "^1.16.2"
   },
   "dependencies": {
     "font-awesome": "^4.7.0",
-    "lodash": "^4.16.6",
+    "lodash": "^4.17.2",
     "normalize-scss": "^6.0.0",
-    "pixi.js": "^4.1.1"
+    "pixi.js": "^4.2.2"
   }
 }
