--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "chai": "^3.5.0",
     "copy-webpack-plugin": "^4.0.1",
     "css-loader": "^0.26.0",
+    "enhanced-resolve": "^2.3.0",
     "extract-text-webpack-plugin": "^1.0.1",
     "karma": "^1.3.0",
     "karma-chai": "^0.1.0",
