--- a/package.json
+++ b/package.json
@@ -22,18 +22,19 @@
     "@types/assertion-error": "^1.0.30",
     "@types/chai": "^3.4.34",
     "@types/karma": "^0.13.33",
-    "@types/lodash": "^4.14.51",
+    "@types/lodash": "^4.14.52",
     "@types/mocha": "^2.2.38",
     "@types/node": "^7.0.4",
     "@types/pixi.js": "^4.3.1",
-    "autoprefixer": "^6.7.0",
+    "@types/webpack": "^2.2.4",
+    "autoprefixer": "^6.7.2",
     "awesome-typescript-loader": "^3.0.0-beta.18",
     "chai": "^3.5.0",
     "copy-webpack-plugin": "^4.0.1",
     "css-loader": "^0.26.1",
     "enhanced-resolve": "^3.0.3",
     "extract-text-webpack-plugin": "^2.0.0-rc.1",
-    "karma": "^1.4.0",
+    "karma": "^1.4.1",
     "karma-chai": "^0.1.0",
     "karma-chrome-launcher": "^2.0.0",
     "karma-mocha": "^1.3.0",
@@ -53,8 +54,8 @@
     "tslint-eslint-rules": "^3.2.3",
     "tslint-loader": "^3.3.0",
     "typescript": "^2.1.5",
-    "webpack": "^2.2.0",
-    "webpack-dev-server": "^2.2.0"
+    "webpack": "^2.2.1",
+    "webpack-dev-server": "^2.2.1"
   },
   "dependencies": {
     "font-awesome": "^4.7.0",
