--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "phantomjs": "^2.1.7",
     "postcss-loader": "^1.2.2",
     "sass-loader": "^4.1.1",
+    "source-map-loader": "^0.1.6",
     "style-loader": "^0.13.1",
     "stylelint": "^7.7.1",
     "stylelint-config-standard": "^15.0.1",
@@ -58,9 +59,13 @@
     "webpack-dev-server": "^2.2.1"
   },
   "dependencies": {
+    "@types/react": "^15.0.6",
+    "@types/react-dom": "^0.14.22",
     "font-awesome": "^4.7.0",
     "lodash": "^4.17.4",
     "normalize-scss": "^6.0.0",
-    "pixi.js": "^4.3.4"
+    "pixi.js": "^4.3.4",
+    "react": "^15.4.2",
+    "react-dom": "^15.4.2"
   }
 }
