--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,6 +2,7 @@
   "compilerOptions": {
     "target": "es6",
     "module": "commonjs",        
+    "jsx": "react",
     "sourceMap": true,
      "typeRoots": [
       "./node_modules/@types"
