--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,7 @@ npm-debug.log
 /typings/
 /build/
 .awcache/
+
+!node_modules/react/dist/react.js
+!node_modules/react-dom/dist/react-dom.js
+!node_modules/pixi.js/dist/pixi.min.js
