--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,8 @@
 {
   "compilerOptions": {
+    "skipLibCheck": true,
     "target": "es2015",
-    "module": "commonjs",
+    "module": "es6",
     "jsx": "react",
     "sourceMap": true,
     "typeRoots": [
@@ -21,7 +22,7 @@
     "useBabel":true
   },
   "compileOnSave": false,
-  "buildOnSave": false,
+  "buildOnSave": false,  
   "atom": {
     "rewriteTsconfig": false
   }
