added more rules to tslint.json

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,5 +7,10 @@
         "**/.hg": true,
         "**/.DS_Store": true,
         "**/.awcache":true
+    },
+    "search.exclude": {
+        "**/node_modules": true,
+        "**/bower_components": true
     }
+    
 }
