--- a/package.json
+++ b/package.json
@@ -26,10 +26,10 @@
     "@types/mocha": "^2.2.39",
     "@types/node": "^7.0.5",
     "@types/pixi.js": "^4.3.1",
-    "@types/webpack": "^2.2.6",
-    "autoprefixer": "^6.7.3",
     "@types/react": "^15.0.11",
     "@types/react-dom": "^0.14.23",
+    "@types/webpack": "^2.2.6",
+    "autoprefixer": "^6.7.3",
     "awesome-typescript-loader": "^3.0.4",
     "babel-core": "^6.23.1",
     "chai": "^3.5.0",
@@ -57,6 +57,7 @@
     "tslint": "^4.4.2",
     "tslint-eslint-rules": "^3.4.0",
     "tslint-loader": "^3.4.2",
+    "tslint-microsoft-contrib": "^4.0.0",
     "typescript": "^2.1.6",
     "webpack": "^2.2.1",
     "webpack-dev-server": "^2.4.0"
