--- a/package.json
+++ b/package.json
@@ -32,6 +32,9 @@
     "autoprefixer": "^6.7.6",
     "awesome-typescript-loader": "^3.0.8",
     "babel-core": "^6.23.1",
+    "babel-loader": "^6.3.2",
+    "babel-preset-env": "^1.2.0",
+    "babel-preset-es2015": "^6.22.0",
     "chai": "^3.5.0",
     "copy-webpack-plugin": "^4.0.1",
     "css-loader": "^0.26.2",
