--- a/package.json
+++ b/package.json
@@ -19,58 +19,58 @@
     "author": "Pawel Soltysiak",
     "license": "MIT",
     "devDependencies": {
-        "@types/assertion-error": "^1.0.30",
-        "@types/chai": "^4.0.4",
-        "@types/karma": "^0.13.36",
-        "@types/lodash": "^4.14.74",
-        "@types/mocha": "^2.2.42",
-        "@types/node": "^8.0.26",
-        "@types/pixi.js": "^4.5.3",
-        "@types/react": "^16.0.5",
-        "@types/react-dom": "^15.5.4",
-        "@types/webpack": "^3.0.10",
-        "autoprefixer": "^7.1.3",
-        "awesome-typescript-loader": "^3.2.3",
+        "@types/assertion-error": "^1.1.0",
+        "@types/chai": "^4.1.2",
+        "@types/karma": "^1.7.3",
+        "@types/lodash": "^4.14.104",
+        "@types/mocha": "^2.2.48",
+        "@types/node": "^9.4.6",
+        "@types/pixi.js": "^4.7.1",
+        "@types/react": "^16.0.38",
+        "@types/react-dom": "^16.0.4",
+        "@types/webpack": "^3.8.8",
+        "autoprefixer": "^8.0.0",
+        "awesome-typescript-loader": "^3.4.1",
         "babel-core": "^6.26.0",
         "babel-loader": "^7.1.2",
-        "babel-preset-env": "^1.6.0",
+        "babel-preset-env": "^1.6.1",
         "babel-preset-es2015": "^6.24.1",
         "chai": "^4.1.2",
-        "copy-webpack-plugin": "^4.0.1",
-        "css-loader": "^0.28.7",
-        "enhanced-resolve": "^3.4.1",
-        "extract-text-webpack-plugin": "^3.0.0",
-        "karma": "^1.7.1",
+        "copy-webpack-plugin": "^4.4.1",
+        "css-loader": "^0.28.9",
+        "enhanced-resolve": "^4.0.0-beta.4",
+        "extract-text-webpack-plugin": "^3.0.2",
+        "karma": "^2.0.0",
         "karma-chai": "^0.1.0",
         "karma-chrome-launcher": "^2.2.0",
         "karma-mocha": "^1.3.0",
         "karma-phantomjs-launcher": "^1.0.4",
-        "karma-webpack": "^2.0.4",
+        "karma-webpack": "^2.0.9",
         "mocha": "^3.5.0",
-        "node-sass": "^4.5.3",
+        "node-sass": "^4.7.2",
         "phantomjs": "^2.1.7",
-        "postcss-loader": "^2.0.6",
+        "postcss-loader": "^2.1.0",
         "sass-loader": "^6.0.6",
-        "source-map-loader": "^0.2.1",
-        "style-loader": "^0.18.2",
-        "stylelint": "^8.0.0",
-        "stylelint-config-standard": "^17.0.0",
-        "stylelint-webpack-plugin": "^0.9.0",
-        "ts-loader": "^2.3.4",
-        "tslint": "^5.7.0",
-        "tslint-eslint-rules": "^4.1.1",
+        "source-map-loader": "^0.2.3",
+        "style-loader": "^0.20.2",
+        "stylelint": "^9.0.0",
+        "stylelint-config-standard": "^18.1.0",
+        "stylelint-webpack-plugin": "^0.10.2",
+        "ts-loader": "^3.5.0",
+        "tslint": "^5.9.1",
+        "tslint-eslint-rules": "^5.0.0",
         "tslint-loader": "^3.5.3",
-        "tslint-microsoft-contrib": "^5.0.1",
-        "typescript": "^2.5.2",
-        "webpack": "^3.5.5",
-        "webpack-dev-server": "^2.7.1"
+        "tslint-microsoft-contrib": "^5.0.3",
+        "typescript": "^2.7.2",
+        "webpack": "^3.11.0",
+        "webpack-dev-server": "^2.11.1"
     },
     "dependencies": {
         "font-awesome": "^4.7.0",
-        "lodash": "^4.17.4",
-        "normalize-scss": "^7.0.0",
-        "pixi.js": "^4.5.5",
-        "react": "^15.6.1",
-        "react-dom": "^15.6.1"
+        "lodash": "^4.17.5",
+        "normalize-scss": "^7.0.1",
+        "pixi.js": "^4.7.0",
+        "react": "^16.2.0",
+        "react-dom": "^16.2.0"
     }
 }
