--- a/Game/package.json
+++ b/Game/package.json
@@ -30,15 +30,15 @@
         "@types/react-dom": "^16.0.4",
         "@types/webpack": "^3.8.8",
         "autoprefixer": "^8.0.0",
-        "awesome-typescript-loader": "^3.4.1",
+        "awesome-typescript-loader": "^3.5.0",
         "babel-core": "^6.26.0",
         "babel-loader": "^7.1.2",
         "babel-preset-env": "^1.6.1",
         "babel-preset-es2015": "^6.24.1",
         "chai": "^4.1.2",
-        "copy-webpack-plugin": "^4.4.1",
-        "css-loader": "^0.28.9",
-        "enhanced-resolve": "^4.0.0-beta.4",
+        "copy-webpack-plugin": "^4.4.2",
+        "css-loader": "^0.28.10",
+        "enhanced-resolve": "^4.0.0",
         "extract-text-webpack-plugin": "^3.0.2",
         "karma": "^2.0.0",
         "karma-chai": "^0.1.0",
@@ -53,12 +53,12 @@
         "sass-loader": "^6.0.6",
         "source-map-loader": "^0.2.3",
         "style-loader": "^0.20.2",
-        "stylelint": "^9.0.0",
+        "stylelint": "^9.1.1",
         "stylelint-config-standard": "^18.1.0",
-        "stylelint-webpack-plugin": "^0.10.2",
+        "stylelint-webpack-plugin": "^0.10.3",
         "ts-loader": "^3.5.0",
         "tslint": "^5.9.1",
-        "tslint-eslint-rules": "^5.0.0",
+        "tslint-eslint-rules": "^5.1.0",
         "tslint-loader": "^3.5.3",
         "tslint-microsoft-contrib": "^5.0.3",
         "typescript": "^2.7.2",
@@ -71,7 +71,6 @@
         "normalize-scss": "^7.0.1",
         "pixi.js": "^4.7.0",
         "react": "^16.2.0",
-        "react-dom": "^16.2.0",
-        "game-support": "file:../support"
+        "react-dom": "^16.2.0"
     }
 }
