--- a/Game/package.json
+++ b/Game/package.json
@@ -19,6 +19,8 @@
     "author": "Pawel Soltysiak",
     "license": "MIT",
     "devDependencies": {
+        "@babel/core": "^7.0.0-beta.40",
+        "@babel/preset-env": "^7.0.0-beta.40",
         "@types/assertion-error": "^1.1.0",
         "@types/chai": "^4.1.2",
         "@types/karma": "^1.7.3",
@@ -31,16 +33,14 @@
         "@types/webpack": "^3.8.8",
         "autoprefixer": "^8.0.0",
         "awesome-typescript-loader": "^3.5.0",
-        "babel-core": "^6.26.0",
-        "babel-loader": "^7.1.2",
-        "babel-preset-env": "^1.6.1",
-        "babel-preset-es2015": "^6.24.1",
+        "babel-loader": "^8.0.0-beta.0",
         "chai": "^4.1.2",
         "copy-webpack-plugin": "^4.4.2",
         "css-loader": "^0.28.10",
         "enhanced-resolve": "^4.0.0",
         "extract-text-webpack-plugin": "^3.0.2",
         "karma": "^2.0.0",
+        "karma-babel-preprocessor": "^8.0.0-beta.0",
         "karma-chai": "^0.1.0",
         "karma-chrome-launcher": "^2.2.0",
         "karma-mocha": "^1.3.0",
