--- a/base/package.json
+++ b/base/package.json
@@ -16,6 +16,7 @@
         "tslint-loader": "^3.5.3",
         "tslint-microsoft-contrib": "^5.0.3",
         "@types/pixi.js": "^4.7.1",
-        "pixi.js": "^4.7.0"
+        "webpack": "^3.11.0",
+        "webpack-dev-server": "^2.11.1"
     }
 }
