--- a/core/package.json
+++ b/core/package.json
@@ -15,6 +15,8 @@
         "tslint": "^5.9.1",
         "tslint-eslint-rules": "^5.0.0",
         "tslint-loader": "^3.5.3",
-        "tslint-microsoft-contrib": "^5.0.3"
+        "tslint-microsoft-contrib": "^5.0.3",
+        "webpack": "^3.11.0",
+        "webpack-dev-server": "^2.11.1"
     }
 }
