--- a/Game/package.json
+++ b/Game/package.json
@@ -32,7 +32,6 @@
         "@types/react-dom": "^16.0.4",
         "@types/webpack": "^3.8.8",
         "autoprefixer": "^8.0.0",
-        "awesome-typescript-loader": "^3.5.0",
         "babel-loader": "^8.0.0-beta.0",
         "chai": "^4.1.2",
         "copy-webpack-plugin": "^4.4.2",
@@ -48,7 +47,6 @@
         "karma-webpack": "^2.0.9",
         "mocha": "^3.5.0",
         "node-sass": "^4.7.2",
-        "phantomjs": "^2.1.7",
         "postcss-loader": "^2.1.0",
         "sass-loader": "^6.0.6",
         "source-map-loader": "^0.2.3",
@@ -57,6 +55,7 @@
         "stylelint-config-standard": "^18.1.0",
         "stylelint-webpack-plugin": "^0.10.3",
         "ts-loader": "^3.5.0",
+        "ts-mockito": "^2.2.10",
         "tslint": "^5.9.1",
         "tslint-eslint-rules": "^5.1.0",
         "tslint-loader": "^3.5.3",
