--- a/base/package.json
+++ b/base/package.json
@@ -14,9 +14,6 @@
         "tslint": "^5.9.1",
         "tslint-eslint-rules": "^5.0.0",
         "tslint-loader": "^3.5.3",
-        "tslint-microsoft-contrib": "^5.0.3",
-        "@types/pixi.js": "^4.7.1",
-        "webpack": "^3.11.0",
-        "webpack-dev-server": "^2.11.1"
+        "tslint-microsoft-contrib": "^5.0.3"
     }
 }
