--- a/game/package.json
+++ b/game/package.json
@@ -32,7 +32,7 @@
         "@types/react-dom": "^16.0.4",
         "@types/webpack": "^3.8.8",
         "autoprefixer": "^8.1.0",
-        "babel-loader": "^8.0.0-beta.0",
+        "babel-loader": "^8.0.0-beta.2",
         "chai": "^4.1.2",
         "copy-webpack-plugin": "^4.5.0",
         "css-loader": "^0.28.10",
@@ -42,6 +42,7 @@
         "karma-chai": "^0.1.0",
         "karma-chrome-launcher": "^2.2.0",
         "karma-mocha": "^1.3.0",
+        "karma-phantomjs-launcher": "^1.0.4",
         "karma-webpack": "^2.0.13",
         "mocha": "^3.5.0",
         "node-sass": "^4.7.2",
