--- a/game/package.json
+++ b/game/package.json
@@ -12,61 +12,61 @@
         "stylelint": "stylelint",
         "server": "call scripts/server.cmd",
         "start": "npm run server",
-        "build": "webpack --progress --colors --display-modules --env.production",
+        "build": "webpack --progress --colors --display-modules --env.production --mode=production",
         "tsd": "tsd"
     },
     "private": true,
     "author": "Pawel Soltysiak",
     "license": "MIT",
     "devDependencies": {
-        "@babel/core": "^7.0.0-beta.40",
-        "@babel/preset-env": "^7.0.0-beta.40",
+        "@babel/core": "^7.0.0-beta.44",
+        "@babel/preset-env": "^7.0.0-beta.44",
         "@types/assertion-error": "^1.1.0",
-        "@types/chai": "^4.1.2",
+        "@types/chai": "^4.1.3",
         "@types/karma": "^1.7.3",
-        "@types/lodash": "^4.14.104",
-        "@types/mocha": "^2.2.48",
-        "@types/node": "^9.4.6",
-        "@types/pixi.js": "^4.7.1",
-        "@types/react": "^16.0.40",
-        "@types/react-dom": "^16.0.4",
-        "@types/webpack": "^3.8.8",
-        "autoprefixer": "^8.1.0",
+        "@types/lodash": "^4.14.107",
+        "@types/mocha": "^5.2.0",
+        "@types/node": "^9.6.6",
+        "@types/pixi.js": "^4.7.3",
+        "@types/react": "^16.3.12",
+        "@types/react-dom": "^16.0.5",
+        "@types/webpack": "^4.1.3",
+        "autoprefixer": "^8.3.0",
         "babel-loader": "^8.0.0-beta.2",
         "chai": "^4.1.2",
-        "copy-webpack-plugin": "^4.5.0",
-        "css-loader": "^0.28.10",
-        "extract-text-webpack-plugin": "^3.0.2",
-        "karma": "^2.0.0",
+        "copy-webpack-plugin": "^4.5.1",
+        "css-loader": "^0.28.11",
+        "karma": "^2.0.2",
         "karma-chai": "^0.1.0",
         "karma-chrome-launcher": "^2.2.0",
         "karma-mocha": "^1.3.0",
-        "karma-webpack": "^2.0.13",
+        "karma-webpack": "^3.0.0",
         "mocha": "^3.5.0",
-        "node-sass": "^4.7.2",
-        "postcss-loader": "^2.1.1",
-        "sass-loader": "^6.0.7",
+        "node-sass": "^4.8.3",
+        "postcss-loader": "^2.1.4",
+        "sass-loader": "^7.0.1",
         "source-map-loader": "^0.2.3",
-        "style-loader": "^0.20.2",
-        "stylelint": "^9.1.1",
+        "style-loader": "^0.21.0",
+        "stylelint": "^9.2.0",
         "stylelint-config-standard": "^18.2.0",
-        "stylelint-webpack-plugin": "^0.10.3",
-        "ts-loader": "^3.5.0",
+        "stylelint-webpack-plugin": "^0.10.4",
+        "ts-loader": "^4.2.0",
         "ts-mockito": "^2.3.0",
         "tslint": "^5.9.1",
         "tslint-eslint-rules": "^5.1.0",
         "tslint-loader": "^3.6.0",
         "tslint-microsoft-contrib": "^5.0.3",
-        "typescript": "^2.7.2",
-        "webpack": "^3.11.0",
-        "webpack-dev-server": "^2.11.1"
+        "typescript": "^2.8.3",
+        "webpack": "^4.0.0",
+        "webpack-cli": "^2.0.15",
+        "webpack-dev-server": "^3.1.3"
     },
     "dependencies": {
         "font-awesome": "^4.7.0",
         "lodash": "^4.17.5",
         "normalize-scss": "^7.0.1",
-        "pixi.js": "^4.7.0",
-        "react": "^16.2.0",
-        "react-dom": "^16.2.0"
+        "pixi.js": "^4.7.3",
+        "react": "^16.3.2",
+        "react-dom": "^16.3.2"
     }
 }
