--- a/game/tsconfig.json
+++ b/game/tsconfig.json
@@ -16,6 +16,9 @@
             ],
             "@base/*":[
                 "base/*"
+            ],
+            "@IGame":[
+                "IGame.ts"
             ]
         },
         "noUnusedLocals": true,
