--- a/game/tsconfig.json
+++ b/game/tsconfig.json
@@ -23,7 +23,11 @@
         },
         "noUnusedLocals": true,
         "inlineSources": true,
-        "noImplicitReturns": true
+        "noImplicitReturns": true,
+        "forceConsistentCasingInFileNames": true,
+        "noImplicitThis":true,
+        //"noImplicitAny":true,
+        //"strict":true
     },
     "exclude": [
         "node_modules"
