--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -10,6 +10,8 @@
     "search.exclude": {
         "**/node_modules": true,
         "**/bower_components": true
-    }
-
+    },
+    "cSpell.words": [
+        "PIXI"
+    ]
 }
