--- a/game/package.json
+++ b/game/package.json
@@ -19,54 +19,54 @@
     "author": "Pawel Soltysiak",
     "license": "MIT",
     "devDependencies": {
-        "@babel/core": "^7.0.0-rc.1",
-        "@babel/preset-env": "^7.0.0-rc.1",
+        "@babel/core": "^7.1.2",
+        "@babel/preset-env": "^7.1.0",
         "@types/assertion-error": "^1.1.0",
-        "@types/chai": "^4.1.4",
-        "@types/karma": "^1.7.5",
-        "@types/lodash": "^4.14.116",
+        "@types/chai": "^4.1.6",
+        "@types/karma": "^3.0.0",
+        "@types/lodash": "^4.14.117",
         "@types/mocha": "^5.2.5",
-        "@types/node": "^10.5.8",
-        "@types/pixi.js": "^4.8.0",
-        "@types/react": "^16.4.9",
-        "@types/react-dom": "^16.0.7",
-        "@types/webpack": "^4.4.9",
-        "autoprefixer": "^9.1.0",
-        "babel-loader": "^8.0.0-beta.4",
-        "chai": "^4.1.2",
-        "copy-webpack-plugin": "^4.5.2",
+        "@types/node": "^10.12.0",
+        "@types/pixi.js": "^4.8.2",
+        "@types/react": "^16.4.18",
+        "@types/react-dom": "^16.0.9",
+        "@types/webpack": "^4.4.17",
+        "autoprefixer": "^9.2.1",
+        "babel-loader": "^8.0.4",
+        "chai": "^4.2.0",
+        "copy-webpack-plugin": "^4.5.4",
         "css-loader": "^1.0.0",
-        "karma": "^3.0.0",
+        "karma": "^3.1.0",
         "karma-chai": "^0.1.0",
         "karma-chrome-launcher": "^2.2.0",
         "karma-mocha": "^1.3.0",
-        "karma-webpack": "^3.0.0",
+        "karma-webpack": "^3.0.5",
         "mocha": "^5.2.0",
-        "node-sass": "^4.9.0",
+        "node-sass": "^4.9.4",
         "postcss-loader": "^3.0.0",
         "sass-loader": "^7.1.0",
-        "source-map-loader": "^0.2.3",
-        "style-loader": "^0.22.1",
-        "stylelint": "^9.4.0",
+        "source-map-loader": "^0.2.4",
+        "style-loader": "^0.23.1",
+        "stylelint": "^9.6.0",
         "stylelint-config-standard": "^18.2.0",
         "stylelint-webpack-plugin": "^0.10.5",
-        "ts-loader": "^4.4.2",
-        "ts-mockito": "^2.3.0",
+        "ts-loader": "^5.2.2",
+        "ts-mockito": "^2.3.1",
         "tslint": "^5.11.0",
-        "tslint-eslint-rules": "^5.3.1",
+        "tslint-eslint-rules": "^5.4.0",
         "tslint-loader": "^3.6.0",
-        "tslint-microsoft-contrib": "^5.2.0",
-        "typescript": "^3.0.1",
-        "webpack": "^4.16.5",
-        "webpack-cli": "^3.1.0",
-        "webpack-dev-server": "^3.1.5"
+        "tslint-microsoft-contrib": "^5.2.1",
+        "typescript": "^3.1.3",
+        "webpack": "^4.22.0",
+        "webpack-cli": "^3.1.2",
+        "webpack-dev-server": "^3.1.9"
     },
     "dependencies": {
         "font-awesome": "^4.7.0",
-        "lodash": "^4.17.10",
+        "lodash": "^4.17.11",
         "normalize-scss": "^7.0.1",
-        "pixi.js": "^4.8.1",
-        "react": "^16.4.2",
-        "react-dom": "^16.4.2"
+        "pixi.js": "^4.8.2",
+        "react": "^16.5.2",
+        "react-dom": "^16.5.2"
     }
 }
